# graphql-rust-example

./: Cargo.toml  docker-compose.yml  schema.graphql
src/: main.rs
src/db/: migration.rs  mod.rs  pool.rs
src/graphql/: mod.rs  routes.rs  schema.rs  utils.rs
src/graphql/post/: mod.rs  model.rs  mutation_post_create.rs  query_post_connection.rs
