[package]
name = "gql-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-cors = "0.6"

async-graphql = "3.0"
async-graphql-actix-web = "3.0"

sea-orm = { version = "^0.6", features = [
  "runtime-actix-rustls",
  "sqlx-postgres",
  "macros",
], default-features = false }

serde = { version = "1", features = ["derive"] }
